# DiscreteDiffusionLM

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/model/: base.yaml  small.yaml
configs/training/: default.yaml  fast.yaml
scripts/: generate.py  generate_synthetic_data.py  gradio_app.py  train.py
src/discrete_diffusion/: __init__.py  pipeline.py  ui.py
src/discrete_diffusion/data/: __init__.py  dataset.py  masking.py  tokenizer.py
src/discrete_diffusion/diffusion/: __init__.py  noise_schedule.py  perturbation.py  sampling.py
src/discrete_diffusion/modeling/: __init__.py  configuration.py  model.py  transformer.py
src/discrete_diffusion/training/: __init__.py  loss.py  trainer.py
src/discrete_diffusion/utils/: __init__.py  visualization.py
tests/: __init__.py  test_model.py  test_noise.py  test_sampling.py  test_tokenizer.py
