[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "discrete-diffusion-lm"
version = "0.1.0"
description = "Discrete Diffusion Transformer for text generation"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Robert"}
]
keywords = ["diffusion", "transformer", "text-generation", "nlp", "deep-learning"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "torch>=2.0.0",
    "transformers>=4.30.0",
    "datasets>=2.14.0",
    "hydra-core>=1.3.0",
    "omegaconf>=2.3.0",
    "bitsandbytes>=0.41.0",
    "gradio>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
ddlm-train = "scripts.train:main"
ddlm-generate = "scripts.generate:main"
ddlm-ui = "discrete_diffusion.ui:main"

[project.urls]
Homepage = "https://github.com/robert/discrete-diffusion-lm"
Repository = "https://github.com/robert/discrete-diffusion-lm"

[tool.setuptools]
packages = ["discrete_diffusion", "scripts"]

[tool.setuptools.package-dir]
"discrete_diffusion" = "src/discrete_diffusion"
"scripts" = "scripts"

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
